--- a/index3.html
+++ b/index3.html
@@ -544,7 +544,7 @@
                                 <div class="section-title__tagline-shape">
                                     <img src="assets/images/shapes/section.png" alt="">
                                 </div>
-                                <span class="section-title__tagline">Our Testimonials</span>
+                                <span class="section-title__tagline">Productos Forinet Destacados</span>
                             </div>
                             <h2 class="section-title__title">Soluciones Fortinet
                                 <br>   Ciberseguridad Avanzada <br> para Empresas"</h2>
@@ -578,14 +578,12 @@
                                                     <div class="testimonial-one__single">
                                                         <div class="testimonial-one__client-info-box">
                                                             <div class="testimonial-one__client-img">
-                                                                <img src="assets/images/testimonial/testimonial-1-1.jpg"
+                                                                <img src="assets/images/svg/FortiGate.svg"
                                                                     alt="">
                                                             </div>
                                                             <div class="testimonial-one__client-content">
                                                                 <h5 class="testimonial-one__client-name">Fortigate
                                                                 </h5>
-                                                                <p class="testimonial-one__client-sub-title">Web
-                                                                    Designer</p>
                                                             </div>
                                                         </div>
                                                         <p class="testimonial-one__text">Firewalls de próxima generación (NGFW) de Fortinet, diseñada para ofrecer seguridad avanzada, alto rendimiento.</p>
@@ -622,20 +620,15 @@
                                                     <div class="testimonial-one__single">
                                                         <div class="testimonial-one__client-info-box">
                                                             <div class="testimonial-one__client-img">
-                                                                <img src="assets/images/testimonial/testimonial-1-2.jpg"
+                                                                <img src="assets/images/svg/fortiswitch.svg"
                                                                     alt="">
                                                             </div>
                                                             <div class="testimonial-one__client-content">
                                                                 <h5 class="testimonial-one__client-name">FortiSwitch
                                                                 </h5>
-                                                                <p class="testimonial-one__client-sub-title">Web
-                                                                    Designer</p>
                                                             </div>
                                                         </div>
-                                                        <p class="testimonial-one__text">We are privileged to workwith
-                                                            hundreds of future
-                                                            this business,including many of the world's top
-                                                            software,and brands business</p>
+                                                        <p class="testimonial-one__text">Switches Ethernet seguros y escalables para un rendimiento continuo sin complejidad.</p>
                                                         <div class="testimonial-one__quote">
                                                             <span class="icon-quotes"></span>
                                                         </div>
@@ -669,20 +662,15 @@
                                                     <div class="testimonial-one__single">
                                                         <div class="testimonial-one__client-info-box">
                                                             <div class="testimonial-one__client-img">
-                                                                <img src="assets/images/testimonial/testimonial-1-3.jpg"
+                                                                <img src="assets/images/svg/FortiAP.svg"
                                                                     alt="">
                                                             </div>
                                                             <div class="testimonial-one__client-content">
                                                                 <h5 class="testimonial-one__client-name">FortiAP
                                                                 </h5>
-                                                                <p class="testimonial-one__client-sub-title">Web
-                                                                    Designer</p>
                                                             </div>
                                                         </div>
-                                                        <p class="testimonial-one__text">We are privileged to workwith
-                                                            hundreds of future
-                                                            this business,including many of the world's top
-                                                            software,and brands business</p>
+                                                        <p class="testimonial-one__text">Puntos de acceso inalámbricos de alto rendimiento para una estabilidad óptima y una conectividad segura.</p>
                                                         <div class="testimonial-one__quote">
                                                             <span class="icon-quotes"></span>
                                                         </div>
@@ -711,26 +699,104 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-xl-5">br
-                                                
+                                            <div class="col-xl-5"><br>
                                                 <div class="testimonial-one__right">
                                                     <div class="testimonial-one__single">
                                                         <div class="testimonial-one__client-info-box">
                                                             <div class="testimonial-one__client-img">
-                                                                <img src="assets/images/testimonial/testimonial-1-3.jpg"
+                                                                <img src="assets/images/svg/FortiManager.svg"
                                                                     alt="">
                                                             </div>
                                                             <div class="testimonial-one__client-content">
                                                                 <h5 class="testimonial-one__client-name">FortiManager
                                                                 </h5>
-                                                                <p class="testimonial-one__client-sub-title">Web
-                                                                    Designer</p>
                                                             </div>
                                                         </div>
-                                                        <p class="testimonial-one__text">We are privileged to workwith
-                                                            hundreds of future
-                                                            this business,including many of the world's top
-                                                            software,and brands business</p>
+                                                        <p class="testimonial-one__text">Gestión unificada para operaciones de red y seguridad, gestión de políticas y automatización del flujo de trabajo</p>
+                                                        <div class="testimonial-one__quote">
+                                                            <span class="icon-quotes"></span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div><!-- /.swiper-slide -->
+                                <div class="swiper-slide">
+                                    <div class="testimonial-one__main-content-inner">
+                                        <div class="row">
+                                            <div class="col-xl-7">
+                                                <div class="testimonial-one__left">
+                                                    <div class="testimonial-one__img-box">
+                                                        <img src="assets/images/testimonial/testimonial-one-img-1.jpg"
+                                                            alt="">
+                                                        <div class="testimonial-one__shape-1">
+                                                            <img src="assets/images/shapes/one.png"
+                                                                alt="">
+                                                        </div>
+                                                        <div class="testimonial-one__shape-2">
+                                                            <img src="assets/images/shapes/testimonial.png"
+                                                                alt="">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-xl-5"><br>
+                                                <div class="testimonial-one__right">
+                                                    <div class="testimonial-one__single">
+                                                        <div class="testimonial-one__client-info-box">
+                                                            <div class="testimonial-one__client-img">
+                                                                <img src="assets/images/svg/FortiAnalyzer.svg"
+                                                                    alt="">
+                                                            </div>
+                                                            <div class="testimonial-one__client-content">
+                                                                <h5 class="testimonial-one__client-name">FortiAnalyzer
+                                                                </h5>
+                                                            </div>
+                                                        </div>
+                                                        <p class="testimonial-one__text">Visibilidad, supervisión y respuesta automatizada a amenazas centralizadas en todo Security Fabric.</p>
+                                                        <div class="testimonial-one__quote">
+                                                            <span class="icon-quotes"></span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div><!-- /.swiper-slide -->
+                                <div class="swiper-slide">
+                                    <div class="testimonial-one__main-content-inner">
+                                        <div class="row">
+                                            <div class="col-xl-7">
+                                                <div class="testimonial-one__left">
+                                                    <div class="testimonial-one__img-box">
+                                                        <img src="assets/images/testimonial/testimonial-one-img-1.jpg"
+                                                            alt="">
+                                                        <div class="testimonial-one__shape-1">
+                                                            <img src="assets/images/shapes/one.png"
+                                                                alt="">
+                                                        </div>
+                                                        <div class="testimonial-one__shape-2">
+                                                            <img src="assets/images/shapes/testimonial.png"
+                                                                alt="">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-xl-5"><br>
+                                                <div class="testimonial-one__right">
+                                                    <div class="testimonial-one__single">
+                                                        <div class="testimonial-one__client-info-box">
+                                                            <div class="testimonial-one__client-img">
+                                                                <img src="assets/images/svg/FortiEDR.svg"
+                                                                    alt="">
+                                                            </div>
+                                                            <div class="testimonial-one__client-content">
+                                                                <h5 class="testimonial-one__client-name">FortiEDR 
+                                                                </h5>
+                                                            </div>
+                                                        </div>
+                                                        <p class="testimonial-one__text">Ofrece endpoint security automatizada que se integra con Fortinet Security Fabric y otras soluciones.</p>
                                                         <div class="testimonial-one__quote">
                                                             <span class="icon-quotes"></span>
                                                         </div>
@@ -746,38 +812,53 @@
 
                     <div class="testimonial-one__thumb-box">
                         <div class="swiper-container" id="testimonial-one__thumb">
-                            <div class="swiper-wrapper">
+                            <!--<div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="testimonial-one__img-holder-box">
                                         <div class="testimonial-one__img-holder">
-                                            <img src="assets/images/testimonial/testimonial-thumb-1-1.jpg" alt="">
+                                            <img src="assets/images/svg/FortiGate.svg" alt="">
                                         </div>
                                     </div>
                                 </div><!-- /.swiper-slide -->
-                                <div class="swiper-slide middle">
+                               <!-- <div class="swiper-slide middle">
                                     <div class="testimonial-one__img-holder-box">
                                         <div class="testimonial-one__img-holder">
-                                            <img src="assets/images/testimonial/testimonial-thumb-1-2.jpg" alt="">
+                                            <img src="assets/images/svg/fortiswitch.svg" alt="">
                                         </div>
                                     </div>
                                 </div><!-- /.swiper-slide -->
-                                <div class="swiper-slide">
+                                <!--<div class="swiper-slide">
                                     <div class="testimonial-one__img-holder-box">
                                         <div class="testimonial-one__img-holder">
-                                            <img src="assets/images/testimonial/testimonial-thumb-1-3.jpg" alt="">
+                                            <img src="assets/images/svg/FortiAP.svg" alt="">
                                         </div>
                                     </div>
                                 </div><!-- /.swiper-slide -->
-                                <div class="swiper-slide">
+                                <!--<div class="swiper-slide">
                                     <div class="testimonial-one__img-holder-box">
                                         <div class="testimonial-one__img-holder">
-                                            <img src="assets/images/testimonial/testimonial-thumb-1-3.jpg" alt="">
+                                            <img src="assets/images/svg/FortiManager.svg" alt="">
                                         </div>
                                     </div>
                                 </div><!-- /.swiper-slide -->
+                                <!--<div class="swiper-slide">
+                                    <div class="testimonial-one__img-holder-box">
+                                        <div class="testimonial-one__img-holder">
+                                            <img src="assets/images/svg/FortiAnalyzer.svg" alt="">
+                                        </div>
+                                    </div>
+                                </div><!-- /.swiper-slide -->
+                                <!--<div class="swiper-slide">
+                                    <div class="testimonial-one__img-holder-box">
+                                        <div class="testimonial-one__img-holder">
+                                            <img src="assets/images/svg/FortiEDR.svg" alt="">
+                                        </div>
+                                    </div>
+                                </div><!-- /.swiper-slide -->
+                                
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </section>
